# Student-database

./: CMakeLists.txt
model/initialization/: Initialization.h
model/mainProcess/: Process.h  main.cpp
model/student/: Student.h  StudentManager.h  TypeOfSortingOfStudents.h
model/utils/: BinaryFileManager.h
view/: ConsoleManager.h
